Cact/kernel/core/kernel.h

struct proc_metadata;
// Page table entry flags
#define PAGE_PRESENT 0x1
#define PAGE_RW      0x2
#define PAGE_USER    0x4
// Log levels for klog()
typedef enum {
    LOG_OK    = 0,
    LOG_WARN  = 1,
    LOG_ERROR = 2,
    LOG_FAIL  = 3,
} log_level_t;
// Framebuffer console I/O
void printk      (const char* fmt, ...);
void printk_color(char* message, uint32_t color);
// Kernel-space string/number utilities
void itoa          (int n, char str[]);
void hex_to_ascii  (uint32_t n, char str[]);
struct task_struct*  create_task   (void (*entry_point)(void));
extern void          switch_to     (uint32_t* old_esp, uint32_t new_esp);
void      switch_paging          (uint32_t* pd);
// ELF loader types
struct proc_page_tracker_t;
struct vfs_node;
void* load_elf(char* path, uint32_t* pd, struct proc_page_tracker_t* tracker);
void  elf_load_exec_symtab(const char* path, struct proc_metadata* proc);
uint32_t elf_get_brk_start(struct vfs_node* file);
extern uint32_t       terminal_fg_pid;