Cact/fs/vfs/vfs.h

// File description — intermediate between fd table and vfs_node.
// dup() shares the same file_t (POSIX semantics).
typedef struct file {
    struct vfs_node *node;
    uint32_t         offset;
    uint32_t         flags;     // open flags (O_RDWR, O_NONBLOCK, etc.)
    uint32_t         cloexec;
    uint32_t         refcount;
    void            *priv;      // per-open state owned by node->fops (see below)
} file_t;
// Generic VFS node — embedded by each filesystem
typedef struct vfs_node {
    char          name[128];
    uint32_t      type;
    uint32_t      size;
    uint32_t      inode;
    uint32_t      refcount;   // hard-link / reference count
    uint32_t      mode;       // permission bits (rwxrwxrwx), 0777 default
    uint32_t      uid;        // owner user id
    uint32_t      gid;        // owner group id
    vfs_ops_t    *ops;        // per-type operations
    vfs_file_ops_t *fops;     // optional per-open operations (see above)
    void         *priv;       // filesystem-private data
} vfs_node_t;
// Global VFS root — set by the first filesystem mount
extern vfs_node_t *vfs_root;
// Walk a path WITHOUT following symlinks
vfs_node_t   *vfs_walk_path       (vfs_node_t *start, const char *path);
file_t       *file_ref       (file_t *f);
int           file_unref     (file_t *f);
void          open_vfs     (vfs_node_t *node);
void          close_vfs    (vfs_node_t *node);
// Permission checking (returns 0 on success, -1 on deny)
int           vfs_check_perm     (vfs_node_t *node, uint32_t perm);